# cheatsheet-gen

./: .gitignore  README.md  header.tex  hello.py  prompt.txt  pyproject.toml
